# Client-python

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RESTAPI_example.py  exchanges.md  pyproject.toml  readmenotes.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.history/: LICENSE_20220127223629  README_20220127204318.md  README_20220127223755.md  README_20220127223813.md  setup_20220127204318.cfg  setup_20220127204429.cfg  setup_20220127204432.cfg  setup_20220127204436.cfg  setup_20220127204439.cfg  setup_20220127204512.cfg  setup_20220127204517.cfg  setup_20220127204534.cfg  setup_20220127204544.cfg  setup_20220127204551.cfg  setup_20220127204552.cfg  setup_20220127204632.cfg  setup_20220127211359.cfg  setup_20220127211403.cfg  setup_20220127211408.cfg  setup_20220127211413.cfg  setup_20220127211420.cfg  setup_20220127211423.cfg  setup_20220127211424.cfg  setup_20220127211425.cfg  setup_20220127211433.cfg  setup_20220127211435.cfg  setup_20220127211437.cfg  setup_20220127211451.cfg  setup_20220127211502.cfg  setup_20220127211514.cfg  setup_20220127211516.cfg  setup_20220127211555.cfg  setup_20220127211556.cfg  setup_20220127211622.cfg  setup_20220127211624.cfg  setup_20220127212037.cfg  setup_20220127212103.cfg  setup_20220127212109.cfg  setup_20220127223559.cfg  setup_20220127225652.cfg  (+60 more)
REST/: REST_API.py
Rest/: README.md  rest_example.py
WebSockets/: websocket_example.py
examples/: REST_example.py
src/Abyiss/: Abyiss.py
src/AbyissClient/: AbyissClient.py
tests/: test_Abyiss.py
