[metadata]
name = Abyiss
version = 0.0.1
author = Abyiss
author_email = support@abyiss.com
description = Abyiss Python Client Libary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abyiss/Client-python
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Office/Business :: Financial :: Point-Of-Sale
    Topic :: Office/Business :: Financial :: Spreadsheet
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Life
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
    Topic :: Database
    Framework :: Datasette
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Database :: Database Engines/Servers
    Natural Language :: English


[options]
packages = find:
install_requires= requests>=2.26.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    tox>=3.24

[options.package_data]
Abyiss = py.typed
